Fixing onboarding form spacing

--- a/web/src/components/OnboardingForm/onboardingForm.css
+++ b/web/src/components/OnboardingForm/onboardingForm.css
@@ -4,6 +4,6 @@
 .onboarding-descriptive-radio-container{
   margin: 0px;
   width: 100%;
-  padding: 10px;
+  padding: 10px 10px 0px;
   margin-bottom: -20px;
 }
